# solutions-engineer-toolkit

./: .env.example  .gitignore  .se_toolkit_metrics.db  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
examples/meridian_bank/: context.txt
examples/meridian_bank/outputs/: 01_account_brief.json  02_discovery_summary.json  03_architecture.json  04_eval_account_brief.json
knowledge_base/: financial_services.md  retail_ecommerce.md
tests/: test_config.py  test_evals.py  test_observability.py
tools/: config.py  demo_screenshot.py
tools/account_intelligence/: agent.py
tools/discovery_agent/: agent.py
tools/evals/: evaluator.py
tools/observability/: tracker.py
tools/proposal_writer/: agent.py
tools/rfp_analyzer/: agent.py
tools/solution_architect/: agent.py
