[project]
name = "solutions-engineer-toolkit"
version = "1.0.0"
description = "AI-powered toolkit empowering Solutions Engineers with RAG, LangGraph, CrewAI, OpenAI Agents SDK, and LangChain."
requires-python = ">=3.10"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
